# model/service/applicant_service.go
@@ -7,8 +7,8 @@ import (
 
 type ApplicantService interface {
 	Create(ctx context.Context, request web.ApplicantCreateReq) web.ApplicantResponse
-	Update(ctx context.Context, request web.ApplicantUpdateReq) web.ApplicantResponse
-	Delete(ctx context.Context, ApplicantId int)
 	FindAll(ctx context.Context) []web.ApplicantResponse
 	FindById(ctx context.Context, ApplicantId int) web.ApplicantResponse
+	Delete(ctx context.Context, ApplicantId int) error
+	Update(ctx context.Context, request web.ApplicantUpdateReq) (web.ApplicantResponse, error)
 }
